# backend-projeto-final-ebac

./: .flake8  db.sqlite3  pyproject.toml  structure.txt
.github/workflows/: test.yml
accounts/: factories.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: user.py
accounts/serializers/: user_serializer.py
accounts/tests/: __init__.py  test_models.py  test_serializers.py  test_viewsets.py
accounts/viewsets/: user_viewset.py
config/: api_root.py  settings.py  urls.py
followers/: factories.py  urls.py
followers/migrations/: 0001_initial.py  0002_rename_user_follower_following.py
followers/models/: __init__.py  follower.py
followers/serializers/: __init__.py  follower_serializer.py
followers/tests/: __init__.py  test_models.py  test_serializers.py  test_viewsets.py
followers/viewsets/: __init__.py  follower_viewset.py
interactions/: factories.py  urls.py
interactions/migrations/: 0001_initial.py
interactions/models/: __init__.py  comment.py  like.py
interactions/serializers/: __init__.py  comment_serializer.py  like_serializer.py
interactions/tests/: __init__.py  test_models.py  test_serializers.py  test_viewsets.py
interactions/viewsets/: __init__.py  comment_viewset.py  like_viewset.py
posts/: factories.py  urls.py
posts/migrations/: 0001_initial.py  0002_post_retweet.py
posts/models/: post.py
posts/serializers/: __init__.py  post_serializer.py
posts/tests/: __init__.py  test_models.py  test_serializers.py  test_viewsets.py
posts/viewsets/: __init__.py  (+1 more)
tests/: __init__.py  test_complex_interactions.py
